Modificado el metood insertarUsuario y mejoras.
Modificado el metodo insertar usuario ya no solo inserta sino que
tambien comprueba si existe o no ese usuario, ademas esta implementado
el que se muestren los paneles aleatoriamente referente al nivel
seleccionado.

--- a/Aprendo con Molly/colores.xaml
+++ b/Aprendo con Molly/colores.xaml
@@ -911,7 +911,7 @@
         			</Button.RenderTransform>
         		</Button>
         	</Canvas>
-        	<Canvas x:Name="letras" Height="614" Width="1024" Visibility="Visible">
+        	<Canvas x:Name="letras" Height="614" Width="1024" Visibility="Hidden">
         		<Rectangle x:Name="e" Height="96" Canvas.Left="146" StrokeThickness="8" Canvas.Top="36" Width="85.5" RenderTransformOrigin="0.5,0.5">
         			<Rectangle.RenderTransform>
         				<TransformGroup>
