--- a/Aprendo con Molly/colores.xaml
+++ b/Aprendo con Molly/colores.xaml
@@ -1065,13 +1065,23 @@
         	<Canvas.Background>
         		<ImageBrush ImageSource="floress.png"/>
         	</Canvas.Background>
-        	<MediaElement x:Name="video" HorizontalAlignment="Left" Height="364" VerticalAlignment="Top" Width="484" Canvas.Left="182.687" Canvas.Top="126" Visibility="Hidden"/>
-        	<Button x:Name="btnJugar" Content="Button" HorizontalAlignment="Left" Height="39.826" Style="{DynamicResource btnJugarEfecto}" VerticalAlignment="Top" Width="137.388" Background="#FF377C07" Canvas.Left="808.964" Canvas.Top="335.982"/>
+
+			<Rectangle x:Name="elipseVideo" Height="391.982" Width="436" Canvas.Left="213" Canvas.Top="53.018" RadiusY="102.982" RadiusX="102.982" Visibility="Hidden">
+				<Rectangle.Fill>
+    				<VisualBrush TileMode="None">
+    					<VisualBrush.Visual>   					
+							<MediaElement x:Name="video" HorizontalAlignment="Left" Height="364" VerticalAlignment="Top" Width="476.5" Canvas.Left="182.687" Canvas.Top="203" RenderTransformOrigin="-0.5,0.5" Volume="1" LoadedBehavior="Manual" UnloadedBehavior="Manual" Stretch="Fill"/>
+						</VisualBrush.Visual>
+    				</VisualBrush>
+				</Rectangle.Fill>
+			</Rectangle>
+
+        	<Button x:Name="btnJugar" Content="Button" HorizontalAlignment="Left" Height="39.826" Style="{DynamicResource btnJugarEfecto}" VerticalAlignment="Top" Width="137.388" Background="#FF377C07" Canvas.Left="808.964" Canvas.Top="335.982" Click="btnJugar_Click"/>
         	<Button x:Name="bntExcuchar" Content="Button" HorizontalAlignment="Left" Height="49.826" Style="{DynamicResource btnEscucharEfecto}" VerticalAlignment="Top" Width="137.388" Canvas.Left="696.964" Canvas.Top="414.982"/>
         	<Button x:Name="btnVer" Content="Button" HorizontalAlignment="Left" Height="33.826" Style="{DynamicResource btnVerEfect}" VerticalAlignment="Top" Width="68.722" Canvas.Left="866.076" Canvas.Top="439.204"/>
         	<Button x:Name="btnMinimiza" Content="Button" HorizontalAlignment="Left" Height="23.72" VerticalAlignment="Top" Width="25.011" Style="{DynamicResource Minimizar}" RenderTransformOrigin="-2.032,0.008" Canvas.Left="906.822" Canvas.Top="10" Click="btnMinimiza_Click"/>
         	<Button x:Name="btnCerrar" Content="Button" HorizontalAlignment="Left" Height="23.72" VerticalAlignment="Top" Width="25.011" Style="{DynamicResource BotonCerrar}" RenderTransformOrigin="-2.032,0.008" Canvas.Left="936.833" Canvas.Top="10" Click="btnCerrar_Click"/>
-        	<Canvas x:Name="bolitas" HorizontalAlignment="Left" Height="300.018" VerticalAlignment="Top" Width="991.992" Canvas.Left="4.008" Canvas.Top="-12">
+        	<Canvas x:Name="bolitas" HorizontalAlignment="Left" Height="300.018" VerticalAlignment="Top" Width="991.992" Canvas.Left="4.008" Canvas.Top="-12" Opacity="0" Visibility="Hidden">
         		<Button x:Name="blanco" Content="Button" HorizontalAlignment="Left" Height="57.78" VerticalAlignment="Top" Width="69" Style="{DynamicResource btnBlanco}" Canvas.Left="2" Canvas.Top="233.518" RenderTransformOrigin="0.5,0.5" Click="HandlerBolas" Tag="Blanco">
         			<Button.RenderTransform>
         				<TransformGroup>
@@ -1174,7 +1184,7 @@
         		</Button>
         	</Canvas>
         	<Canvas x:Name="letras" Height="614" Width="1024" Visibility="Hidden" Opacity="0">
-        		<Rectangle x:Name="e" Height="96" Canvas.Left="146" StrokeThickness="8" Canvas.Top="36" Width="85.5" RenderTransformOrigin="0.5,0.5">
+        		<Rectangle x:Name="e" Height="96" Canvas.Left="146" StrokeThickness="8" Canvas.Top="36" Width="85.5" RenderTransformOrigin="0.5,0.5" Tag="E">
         			<Rectangle.RenderTransform>
         				<TransformGroup>
         					<ScaleTransform/>
@@ -1187,7 +1197,7 @@
         				<ImageBrush ImageSource="e.png"/>
         			</Rectangle.Fill>
         		</Rectangle>
-        		<Rectangle x:Name="b" Height="96" Canvas.Left="36.5" StrokeThickness="8" Canvas.Top="42" Width="85.5" RenderTransformOrigin="0.5,0.5">
+        		<Rectangle x:Name="b" Height="96" Canvas.Left="36.5" StrokeThickness="8" Canvas.Top="42" Width="85.5" RenderTransformOrigin="0.5,0.5" Tag="B">
         			<Rectangle.RenderTransform>
         				<TransformGroup>
         					<ScaleTransform/>
@@ -1200,7 +1210,7 @@
         				<ImageBrush ImageSource="b.png"/>
         			</Rectangle.Fill>
         		</Rectangle>
-        		<Rectangle x:Name="q" Height="96" Canvas.Left="261.5" StrokeThickness="8" Canvas.Top="36" Width="85.5" RenderTransformOrigin="0.5,0.5">
+        		<Rectangle x:Name="q" Height="96" Canvas.Left="261.5" StrokeThickness="8" Canvas.Top="36" Width="85.5" RenderTransformOrigin="0.5,0.5" Tag="Q">
         			<Rectangle.RenderTransform>
         				<TransformGroup>
         					<ScaleTransform/>
@@ -1213,7 +1223,7 @@
         				<ImageBrush ImageSource="q.png"/>
         			</Rectangle.Fill>
         		</Rectangle>
-        		<Rectangle x:Name="r" Height="96" Canvas.Left="379.5" StrokeThickness="8" Canvas.Top="36" Width="85.5" RenderTransformOrigin="0.5,0.5">
+        		<Rectangle x:Name="r" Height="96" Canvas.Left="379.5" StrokeThickness="8" Canvas.Top="36" Width="85.5" RenderTransformOrigin="0.5,0.5" Tag="R">
         			<Rectangle.RenderTransform>
         				<TransformGroup>
         					<ScaleTransform/>
@@ -1226,7 +1236,7 @@
         				<ImageBrush ImageSource="r.png"/>
         			</Rectangle.Fill>
         		</Rectangle>
-        		<Rectangle x:Name="g" Height="96" Canvas.Left="145.5" StrokeThickness="8" Canvas.Top="283" Width="85.5" RenderTransformOrigin="0.5,0.5">
+        		<Rectangle x:Name="g" Height="96" Canvas.Left="145.5" StrokeThickness="8" Canvas.Top="283" Width="85.5" RenderTransformOrigin="0.5,0.5" Tag="G">
         			<Rectangle.RenderTransform>
         				<TransformGroup>
         					<ScaleTransform/>
@@ -1239,7 +1249,7 @@
         				<ImageBrush ImageSource="g.png"/>
         			</Rectangle.Fill>
         		</Rectangle>
-        		<Rectangle x:Name="i" StrokeThickness="8" Height="96" Canvas.Left="489.5" Canvas.Top="34" Width="85.5" RenderTransformOrigin="0.5,0.5">
+        		<Rectangle x:Name="i" StrokeThickness="8" Height="96" Canvas.Left="489.5" Canvas.Top="34" Width="85.5" RenderTransformOrigin="0.5,0.5" Tag="I">
         			<Rectangle.RenderTransform>
         				<TransformGroup>
         					<ScaleTransform/>
@@ -1252,7 +1262,7 @@
         				<ImageBrush ImageSource="i.png"/>
         			</Rectangle.Fill>
         		</Rectangle>
-        		<Rectangle x:Name="j" StrokeThickness="8" Height="96" Canvas.Left="808.5" Canvas.Top="34" Width="85.5" RenderTransformOrigin="0.5,0.5">
+        		<Rectangle x:Name="j" StrokeThickness="8" Height="96" Canvas.Left="808.5" Canvas.Top="34" Width="85.5" RenderTransformOrigin="0.5,0.5" Tag="J">
         			<Rectangle.RenderTransform>
         				<TransformGroup>
         					<ScaleTransform/>
@@ -1265,7 +1275,7 @@
         				<ImageBrush ImageSource="j.png"/>
         			</Rectangle.Fill>
         		</Rectangle>
-        		<Rectangle x:Name="n" StrokeThickness="8" Height="96" Canvas.Left="574.5" Canvas.Top="283" Width="85.5" RenderTransformOrigin="0.5,0.5">
+        		<Rectangle x:Name="n" StrokeThickness="8" Height="96" Canvas.Left="574.5" Canvas.Top="283" Width="85.5" RenderTransformOrigin="0.5,0.5" Tag="N">
         			<Rectangle.RenderTransform>
         				<TransformGroup>
         					<ScaleTransform/>
@@ -1278,7 +1288,7 @@
         				<ImageBrush ImageSource="n.png"/>
         			</Rectangle.Fill>
         		</Rectangle>
-        		<Rectangle x:Name="h" StrokeThickness="8" Height="96" Canvas.Left="89.5" Canvas.Top="158" Width="85.5" RenderTransformOrigin="0.5,0.5">
+        		<Rectangle x:Name="h" StrokeThickness="8" Height="96" Canvas.Left="89.5" Canvas.Top="158" Width="85.5" RenderTransformOrigin="0.5,0.5" Tag="H">
         			<Rectangle.RenderTransform>
         				<TransformGroup>
         					<ScaleTransform/>
@@ -1291,7 +1301,7 @@
         				<ImageBrush ImageSource="h.png"/>
         			</Rectangle.Fill>
         		</Rectangle>
-        		<Rectangle x:Name="f" StrokeThickness="8" Height="96" Canvas.Left="325.5" Canvas.Top="158" Width="85.5" RenderTransformOrigin="0.5,0.5">
+        		<Rectangle x:Name="f" StrokeThickness="8" Height="96" Canvas.Left="325.5" Canvas.Top="158" Width="85.5" RenderTransformOrigin="0.5,0.5" Tag="F">
         			<Rectangle.RenderTransform>
         				<TransformGroup>
         					<ScaleTransform/>
@@ -1304,7 +1314,7 @@
         				<ImageBrush ImageSource="f.png"/>
         			</Rectangle.Fill>
         		</Rectangle>
-        		<Rectangle x:Name="a" StrokeThickness="8" Height="96" Canvas.Left="209" Canvas.Top="158" Width="85.5" RenderTransformOrigin="0.5,0.5">
+        		<Rectangle x:Name="a" StrokeThickness="8" Height="96" Canvas.Left="209" Canvas.Top="158" Width="85.5" RenderTransformOrigin="0.5,0.5" Tag="A">
         			<Rectangle.RenderTransform>
         				<TransformGroup>
         					<ScaleTransform/>
@@ -1317,7 +1327,7 @@
         				<ImageBrush ImageSource="a.png"/>
         			</Rectangle.Fill>
         		</Rectangle>
-        		<Rectangle x:Name="c" StrokeThickness="8" Height="96" Canvas.Left="31.5" Canvas.Top="284" Width="85.5" RenderTransformOrigin="0.5,0.5">
+        		<Rectangle x:Name="c" StrokeThickness="8" Height="96" Canvas.Left="31.5" Canvas.Top="284" Width="85.5" RenderTransformOrigin="0.5,0.5" Tag="C">
         			<Rectangle.RenderTransform>
         				<TransformGroup>
         					<ScaleTransform/>
@@ -1330,7 +1340,7 @@
         				<ImageBrush ImageSource="c.png"/>
         			</Rectangle.Fill>
         		</Rectangle>
-        		<Rectangle x:Name="o" StrokeThickness="8" Height="96" Canvas.Left="253.5" Canvas.Top="284" Width="85.5" RenderTransformOrigin="0.5,0.5">
+        		<Rectangle x:Name="o" StrokeThickness="8" Height="96" Canvas.Left="253.5" Canvas.Top="284" Width="85.5" RenderTransformOrigin="0.5,0.5" Tag="O">
         			<Rectangle.RenderTransform>
         				<TransformGroup>
         					<ScaleTransform/>
@@ -1343,7 +1353,7 @@
         				<ImageBrush ImageSource="o.png"/>
         			</Rectangle.Fill>
         		</Rectangle>
-        		<Rectangle x:Name="k" StrokeThickness="8" Height="96" Canvas.Left="439" Canvas.Top="158" Width="85.5" RenderTransformOrigin="0.5,0.5">
+        		<Rectangle x:Name="k" StrokeThickness="8" Height="96" Canvas.Left="439" Canvas.Top="158" Width="85.5" RenderTransformOrigin="0.5,0.5" Tag="K">
         			<Rectangle.RenderTransform>
         				<TransformGroup>
         					<ScaleTransform/>
@@ -1356,7 +1366,7 @@
         				<ImageBrush ImageSource="k.png"/>
         			</Rectangle.Fill>
         		</Rectangle>
-        		<Rectangle x:Name="l" StrokeThickness="8" Height="96" Canvas.Left="560" Canvas.Top="158" Width="85.5" RenderTransformOrigin="0.5,0.5">
+        		<Rectangle x:Name="l" StrokeThickness="8" Height="96" Canvas.Left="560" Canvas.Top="158" Width="85.5" RenderTransformOrigin="0.5,0.5" Tag="L">
         			<Rectangle.RenderTransform>
         				<TransformGroup>
         					<ScaleTransform/>
@@ -1369,7 +1379,7 @@
         				<ImageBrush ImageSource="l.png"/>
         			</Rectangle.Fill>
         		</Rectangle>
-        		<Rectangle x:Name="t" StrokeThickness="8" Height="96" Canvas.Left="704" Canvas.Top="34" Width="85.5" RenderTransformOrigin="0.5,0.5">
+        		<Rectangle x:Name="t" StrokeThickness="8" Height="96" Canvas.Left="704" Canvas.Top="34" Width="85.5" RenderTransformOrigin="0.5,0.5" Tag="T">
         			<Rectangle.RenderTransform>
         				<TransformGroup>
         					<ScaleTransform/>
@@ -1382,7 +1392,7 @@
         				<ImageBrush ImageSource="t.png"/>
         			</Rectangle.Fill>
         		</Rectangle>
-        		<Rectangle x:Name="s" StrokeThickness="8" Height="96" Canvas.Left="671.5" Canvas.Top="158" Width="85.5" RenderTransformOrigin="0.5,0.5">
+        		<Rectangle x:Name="s" StrokeThickness="8" Height="96" Canvas.Left="671.5" Canvas.Top="158" Width="85.5" RenderTransformOrigin="0.5,0.5" Tag="S">
         			<Rectangle.RenderTransform>
         				<TransformGroup>
         					<ScaleTransform/>
@@ -1395,7 +1405,7 @@
         				<ImageBrush ImageSource="s.png"/>
         			</Rectangle.Fill>
         		</Rectangle>
-        		<Rectangle x:Name="m" StrokeThickness="8" Height="96" Canvas.Left="361.5" Canvas.Top="284" Width="85.5" RenderTransformOrigin="0.5,0.5">
+        		<Rectangle x:Name="m" StrokeThickness="8" Height="96" Canvas.Left="361.5" Canvas.Top="284" Width="85.5" RenderTransformOrigin="0.5,0.5" Tag="M">
         			<Rectangle.RenderTransform>
         				<TransformGroup>
         					<ScaleTransform/>
@@ -1408,7 +1418,7 @@
         				<ImageBrush ImageSource="m.png"/>
         			</Rectangle.Fill>
         		</Rectangle>
-        		<Rectangle x:Name="z" StrokeThickness="8" Height="96" Canvas.Left="460" Canvas.Top="420" Width="85.5" RenderTransformOrigin="0.5,0.5">
+        		<Rectangle x:Name="z" StrokeThickness="8" Height="96" Canvas.Left="460" Canvas.Top="420" Width="85.5" RenderTransformOrigin="0.5,0.5" Tag="Z">
         			<Rectangle.RenderTransform>
         				<TransformGroup>
         					<ScaleTransform/>
@@ -1421,7 +1431,7 @@
         				<ImageBrush ImageSource="z.png"/>
         			</Rectangle.Fill>
         		</Rectangle>
-        		<Rectangle x:Name="u" StrokeThickness="8" Height="96" Canvas.Left="560.5" Canvas.Top="420" Width="85.5" RenderTransformOrigin="0.5,0.5">
+        		<Rectangle x:Name="u" StrokeThickness="8" Height="96" Canvas.Left="560.5" Canvas.Top="420" Width="85.5" RenderTransformOrigin="0.5,0.5" Tag="U">
         			<Rectangle.RenderTransform>
         				<TransformGroup>
         					<ScaleTransform/>
@@ -1434,7 +1444,7 @@
         				<ImageBrush ImageSource="u.png"/>
         			</Rectangle.Fill>
         		</Rectangle>
-        		<Rectangle x:Name="w" StrokeThickness="8" Height="96" Canvas.Left="597.5" Canvas.Top="34" Width="85.5" RenderTransformOrigin="0.5,0.5">
+        		<Rectangle x:Name="w" StrokeThickness="8" Height="96" Canvas.Left="597.5" Canvas.Top="34" Width="85.5" RenderTransformOrigin="0.5,0.5" Tag="W">
         			<Rectangle.RenderTransform>
         				<TransformGroup>
         					<ScaleTransform/>
@@ -1447,7 +1457,7 @@
         				<ImageBrush ImageSource="w.png"/>
         			</Rectangle.Fill>
         		</Rectangle>
-        		<Rectangle x:Name="p" StrokeThickness="8" Height="96" Canvas.Left="895.5" Canvas.Top="158" Width="85.5" RenderTransformOrigin="0.5,0.5">
+        		<Rectangle x:Name="p" StrokeThickness="8" Height="96" Canvas.Left="895.5" Canvas.Top="158" Width="85.5" RenderTransformOrigin="0.5,0.5" Tag="P">
         			<Rectangle.RenderTransform>
         				<TransformGroup>
         					<ScaleTransform/>
@@ -1460,7 +1470,7 @@
         				<ImageBrush ImageSource="p.png"/>
         			</Rectangle.Fill>
         		</Rectangle>
-        		<Rectangle x:Name="y" StrokeThickness="8" Height="96" Canvas.Left="468.5" Canvas.Top="284" Width="85.5" RenderTransformOrigin="0.5,0.5">
+        		<Rectangle x:Name="y" StrokeThickness="8" Height="96" Canvas.Left="468.5" Canvas.Top="284" Width="85.5" RenderTransformOrigin="0.5,0.5" Tag="Y">
         			<Rectangle.RenderTransform>
         				<TransformGroup>
         					<ScaleTransform/>
@@ -1473,7 +1483,7 @@
         				<ImageBrush ImageSource="y.png"/>
         			</Rectangle.Fill>
         		</Rectangle>
-        		<Rectangle x:Name="x" StrokeThickness="8" Height="96" Canvas.Left="251.5" Canvas.Top="420" Width="85.5" RenderTransformOrigin="0.5,0.5">
+        		<Rectangle x:Name="x" StrokeThickness="8" Height="96" Canvas.Left="251.5" Canvas.Top="420" Width="85.5" RenderTransformOrigin="0.5,0.5" Tag="X">
         			<Rectangle.RenderTransform>
         				<TransformGroup>
         					<ScaleTransform/>
@@ -1486,7 +1496,7 @@
         				<ImageBrush ImageSource="x.png" Stretch="UniformToFill"/>
         			</Rectangle.Fill>
         		</Rectangle>
-        		<Rectangle x:Name="d" StrokeThickness="8" Height="96" Canvas.Left="350" Canvas.Top="420" Width="85.5" RenderTransformOrigin="0.5,0.5">
+        		<Rectangle x:Name="d" StrokeThickness="8" Height="96" Canvas.Left="350" Canvas.Top="420" Width="85.5" RenderTransformOrigin="0.5,0.5" Tag="D">
         			<Rectangle.RenderTransform>
         				<TransformGroup>
         					<ScaleTransform/>
@@ -1499,7 +1509,7 @@
         				<ImageBrush ImageSource="d.png"/>
         			</Rectangle.Fill>
         		</Rectangle>
-        		<Rectangle x:Name="v" Height="96" Canvas.Left="783.5" StrokeThickness="8" Canvas.Top="157" Width="85.5" RenderTransformOrigin="0.5,0.5">
+        		<Rectangle x:Name="v" Height="96" Canvas.Left="783.5" StrokeThickness="8" Canvas.Top="157" Width="85.5" RenderTransformOrigin="0.5,0.5" Tag="V">
         			<Rectangle.RenderTransform>
         				<TransformGroup>
         					<ScaleTransform/>
@@ -1513,7 +1523,7 @@
         			</Rectangle.Fill>
         		</Rectangle>
         	</Canvas>
-        	<Rectangle x:Name="espacioJuego" HorizontalAlignment="Left" Height="367.5" RadiusY="48" RadiusX="48" StrokeThickness="8" VerticalAlignment="Top" Width="476.5" Canvas.Left="182.687" Canvas.Top="227.5" Visibility="Hidden" Opacity="0">
+        	<Rectangle x:Name="espacioJuego" HorizontalAlignment="Left" Height="367.5" RadiusY="48" RadiusX="48" StrokeThickness="8" VerticalAlignment="Top" Width="476.5" Canvas.Left="182.687" Canvas.Top="227.5" Opacity="0" Visibility="Hidden">
         		<Rectangle.Fill>
         			<ImageBrush ImageSource="am.png"/>
         		</Rectangle.Fill>
